chatsolution/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatsolution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatsolution
  template:
    metadata:
      labels:
        app: chatsolution
    spec:
      containers:
      - name: chatsolution
        image: ghcr.io/pmh-only/chatsolution
