chatsolution/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatsolution-service
spec:
  selector:
    app: chatsolution
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
