chatsolution/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatsolution-route
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - c.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io/
      backendRefs:
        - name: chatsolution-service
          port: 80
